# $Id$

2006-09-28	Konstantin V. Arkhipov

	* main/Base/ObjectsTree.class.php: ressurected.

2006-09-27	Konstantin V. Arkhipov

	* meta/: 'source link' support in DAO's implemented.

	* core/DB/DBPool.class.php: new way for handling multi-DB's projects.

2006-09-26	Konstantin V. Arkhipov

	* meta/builders/SchemaBuilder.class.php: handling of property-less
	classes fixed too.

	* meta/builders/AutoDaoBuilder.class.php: fixed bug with inherited
	property-less DAO's.

2006-09-25	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: corrected handling of
	parent's identifiers (if any).

	* meta/builders/ProtoClassBuilder.class.php: inheritance support
	implemented, useless constructor and private property dropped.

	* core/OSQL/TruncateQuery.class.php,
	test/core/TruncateQueryTest.class.php: single table handling fixed,
	test updated.

	* meta/classes/MetaClass.class.php: try to resolve parent's identifier
	in cases where child doesn't own one.

2006-09-24	Konstantin V. Arkhipov

	* main/DAOs/FullTextDAO.class.php: is now interface-helper for
	introduced FullTextUtils.

	* main/DAOs/MappedDAO.class.php,
	main/DAOs/MappedStorableDAO.class.php: dropped, since all Storable's
	childs are now Mapped too.

	* main/Base/Credentials.class.php: dropped.

	* FinalNamedObjectDAO.class.php, NamedObjectDAO.class.php: useless
	classes dropped.

	* main/DAOs/FinalObjectsTreeDAO.class.php,
	main/DAOs/ObjectsTreeDAO.class.php, main/Base/ObjectsTree.class.php:
	deprecated classes dropped.

2006-09-22	Konstantin V. Arkhipov

	* ext/src/main/DAOs/Handlers/SharedMemorySegmentHandler.c: dropped.

	* main/DAOs/FullTextDAO.class.php: deprecated.

	* core/Cache/ReferencePool.class.php,
	core/Cache/WatermarkedPeer.class.php: simplified a bit.

2006-09-21	Konstantin V. Arkhipov

	* main/DAOs/Handlers/XCacheSegmentHandler.class.php: one more
	segment handler added.

2006-09-20	Denis M. Gabaidulin

	* core/Base/Session.class.php: dropAll() method was added.
