@@ -1,5 +1,10 @@
 # $Id$
 
+2006-09-29	Konstantin V. Arkhipov
+
+	* main/DAOs/GenericDAO.class.php, main/DAOs/StorableDAO.class.php:
+	backwards compatibility introduced for 0.2-style pseudo-mappings.
+
 2006-09-28	Konstantin V. Arkhipov
 
 	* main/Base/ObjectsTree.class.php: ressurected.
